--- a/Camelonta.ActivityLog/Camelonta.ActivityLog.csproj
+++ b/Camelonta.ActivityLog/Camelonta.ActivityLog.csproj
@@ -82,8 +82,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
-    <Reference Include="ImageProcessor, Version=2.3.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ImageProcessor.2.3.3.0\lib\net45\ImageProcessor.dll</HintPath>
+    <Reference Include="ImageProcessor, Version=2.5.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ImageProcessor.2.5.3\lib\net45\ImageProcessor.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="ImageProcessor.Web, Version=4.5.3.0, Culture=neutral, processorArchitecture=MSIL">
@@ -328,8 +328,11 @@
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>SET BOILERPLATE="C:\work\SVN\Umbraco\Boilerplate\"
+SET PLUGINDIR="%25BOILERPLATE%25App_Plugins\Camelonta.ActivityLog"
+MKDIR %25PLUGINDIR%25
+xcopy $(TargetPath) "%25BOILERPLATE%25bin" /Y /D
+xcopy "$(ProjectDir)App_Plugins\Camelonta.ActivityLog\*.*" %25PLUGINDIR%25 /Y /D</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>
